Added working hashes for each project.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 A palindrome is a word or sentence that's spelled the same way both forward and backward, ignoring punctuation, case, and spacing.
             </p>
             <div>
-                <input value="Type your palindrome here." id="palindrome-input">        
+                <input placeholder="Type your palindrome here." id="palindrome-input">        
                 </input>
                 <button id="palindrome-button">
                     TEST
@@ -198,7 +198,7 @@
                 All roman numerals answers should be provided in upper-case.
             </p>
             <div>
-                <input value="Type a 4-digit number here." id="roman-input" type="number" min="1" max="9999">        
+                <input placeholder="Type a 4-digit number here." id="roman-input" type="number" min="1" max="9999">        
                 </input>
                 <button id="roman-button">
                     TEST
@@ -518,7 +518,7 @@
                 All letters will be uppercase. Do not transform any non-alphabetic character (i.e. spaces, punctuation), but do pass them on.
             </p>
             <div>
-                <input value="Type an UPPERCASE text here." id="caesars-input">        
+                <input placeholder="Type an UPPERCASE text here." id="caesars-input">        
                 </input>
                 <button id="caesars-button">
                     TEST
@@ -659,7 +659,7 @@
                 For this challenge you will be presented with a string such as <code>800-692-7753</code> or <code>8oo-six427676;laskdjf</code>. Your job is to validate or reject the US phone number based on any combination of the formats provided above. The area code is required. If the country code is provided, you must confirm that the country code is <code>1</code>. Return <code>true</code> if the string is a valid US phone number; otherwise return <code>false</code>.
             </p>
             <div>
-                <input value="Type a phone number here." id="telephone-input">        
+                <input placeholder="Type a phone number here." id="telephone-input">        
                 </input>
                 <button id="telephone-button">
                     TEST
