Improved the code for the Telephone Number Validator with a single RegExp.

--- a/index.html
+++ b/index.html
@@ -735,134 +735,9 @@
                         </p>
                         <div class="code-left-padding">
                             <p>
-                                let inputArray = str.split('');
+                                let regExp = /^1?\s?[\(]+\d{3}[\)]+[-\s]?\d{3}[-\s]?\d{4}$|^1?\s?\d{3}[-\s]?\d{3}[-\s]?\d{4}$/g;
                                 <br />
-                                let cleanNumbers = inputArray.filter(value => value.match(/[0-9]/g));
-                                <br />
-                                let allNumDiez = /^\d{10}/g;
-                                <br />
-                                let hashDiez = /^\d{3}[-]\d{3}[-]\d{4}/g;
-                                <br />
-                                let parenHashDiez = /^[(]\d{3}[)]\d{3}[-]\d{4}/g;
-                                <br />
-                                let espacioGuionesOnce = /^[1]\s\d{3}[-]\d{3}[-]\d{4}/g;
-                                <br />
-                                let espacioParentesisGuion = /^[1]\s[(]\d{3}[)]\s\d{3}[-]\d{4}/g;
-                                <br />
-                                let parentesisGuionOnce = /^[1][(]\d{3}[)]\d{3}[-]\d{4}/g;
-                                <br />
-                                let espaciosOnce = /^[1]\s\d{3}\s\d{3}\s\d{4}/g;
-                            </p>
-                            <p>
-                                if (cleanNumbers.length == 10) {
-                                <br />
-                                <span class="code-left-padding">
-                                    if (allNumDiez.test(str)) {
-                                </span>
-                                <br />
-                                <span class="code-left-padding">
-                                    <span class="code-left-padding">
-                                return true;
-                                    </span>
-                                </span>    
-                                <br />
-                                <span class="code-left-padding">
-                                    } else if (hashDiez.test(str)) {
-                                </span>
-                                <br />
-                                <span class="code-left-padding">
-                                    <span class="code-left-padding">
-                                return true;
-                                    </span>
-                                </span>    
-                                <br />
-                                <span class="code-left-padding">
-                                    } else if (parenHashDiez.test(str)) {
-                                </span>
-                                <br />
-                                <span class="code-left-padding">
-                                    <span class="code-left-padding">
-                                return true;
-                                    </span>
-                                </span>    
-                                <br />
-                                <span class="code-left-padding">
-                                    } else {
-                                </span>
-                                <br />
-                                <span class="code-left-padding">
-                                    <span class="code-left-padding">
-                                return false;
-                                    </span>
-                                </span>    
-                                <br />
-                                <span class="code-left-padding">
-                                    }
-                                </span>
-                                <br />
-                                } else if (cleanNumbers.length == 11) {
-                                <br />
-                                <span class="code-left-padding">
-                                if (espacioGuionesOnce.test(str)) {
-                                </span>    
-                                <br />
-                                <span class="code-left-padding">
-                                    <span class="code-left-padding">
-                                return true;
-                                    </span>
-                                </span>
-                                <br />
-                                <span class="code-left-padding">
-                                    } else if (espacioParentesisGuion.test(str)) {
-                                </span>
-                                <br />
-                                <span class="code-left-padding">
-                                    <span class="code-left-padding">
-                                return true;
-                                    </span>
-                                </span>
-                                <br />
-                                <span class="code-left-padding">
-                                    } else if (parentesisGuionOnce.test(str)) {
-                                </span>
-                                <br />
-                                <span class="code-left-padding">
-                                    <span class="code-left-padding">
-                                return true;
-                                    </span>
-                                </span>
-                                <br />
-                                <span class="code-left-padding">
-                                    } else if (espaciosOnce.test(str)) {
-                                </span>
-                                <br />
-                                <span class="code-left-padding">
-                                    <span class="code-left-padding">
-                                return true;
-                                    </span>
-                                </span>
-                                <br />
-                                <span class="code-left-padding">
-                                } else {
-                                </span>
-                                <br />
-                                <span class="code-left-padding">
-                                    <span class="code-left-padding">
-                                return false;
-                                    </span>
-                                </span>
-                                <br />
-                                <span class="code-left-padding">
-                                    }
-                                </span>
-                                <br />
-                                } else {
-                                <br />
-                                <span class="code-left-padding">
-                                return false;
-                                </span>
-                                <br />
-                                }
+                                return regExp.test(str);
                             </p>
                         </div>
                         <p>
